--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
-	<body>
+	<head>
+		<script src="script.js"></script>
+		<title>The Website</title>
+	</head>
+	<body onload="init()">
 		<h1>Welcome to the website</h1>
+		<p>While you're here, why not count a little. Here, just click this button...</p>
+		<button type="button" onclick="click_count()" id="the-button">0</button>
 	</body>
 </html>
