--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 		<h1>Welcome to the website</h1>
 		<p>While you're here, why not count a little. Here, just click this button...</p>
 		<button type="button" onclick="click_count()" id="the-button">0</button>
+		<p>Here is a random cat fact... maybe...</p>
+		<p id="random-cat-fact"></p>
 	</body>
 </html>
